Fix height on mobile sizes

--- a/assets/styles/partials/homepage/home-gallery.scss
+++ b/assets/styles/partials/homepage/home-gallery.scss
@@ -60,9 +60,8 @@
   max-width: 832px;
 
   @media (max-width: 832px) {
-    top: 0;
+    top: 2rem;
     left: 0;
-    height: 100vh;
   }
 
   &-img {
